--- a/package.json
+++ b/package.json
@@ -2,23 +2,39 @@
   "name": "with-mobx",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "nodemon -w server.js server.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
-    "mobx": "^2.7.0",
-    "mobx-react": "^4.0.4",
-    "next": "^9.1.1",
-    "node-sass": "^4.13.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "mobx": "^5.15.7",
+    "mobx-react": "^6.3.0",
+    "next": "^9.5.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "axios": "^0.19.2",
+    "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^2.0.0",
+    "express": "^4.17.1",
+    "next-i18next": "^6.0.2",
+    "next-images": "^1.4.1",
+    "react-icons": "^3.11.0"
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-decorators": "^7.1.0"
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0"
   }
 }
