--- a/package.json
+++ b/package.json
@@ -7,35 +7,43 @@
     "start": "next start"
   },
   "dependencies": {
-    "mobx": "^5.15.7",
-    "mobx-react": "^6.3.0",
-    "next": "^9.5.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "axios": "^0.19.2",
-    "date-fns": "^2.16.1",
+    "@babel/core": "^7.13.13",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "axios": "^0.21.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "child_process": "^1.0.2",
+    "date-fns": "^2.19.0",
     "dotenv": "^8.2.0",
-    "dotenv-webpack": "^2.0.0",
+    "dotenv-webpack": "^7.0.2",
     "express": "^4.17.1",
-    "next-i18next": "^6.0.2",
-    "next-images": "^1.4.1",
-    "react-icons": "^3.11.0",
-    "babel-plugin-transform-remove-console": "^6.9.4"
+    "jsdom": "13.0.0",
+    "mobx": "^6.1.8",
+    "mobx-react": "^7.1.0",
+    "next": "^10.0.9",
+    "next-i18next": "^8.1.2",
+    "next-images": "^1.7.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-sketch": "^0.5.1",
+    "react-sketch-whiteboard": "^3.9.3",
+    "socket.io-client": "2.3.0",
+    "yarn-upgrade-all": "^0.5.4"
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0"
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.1"
   }
 }
