--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/core": "4.11.3",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.57",
     "axios": "^0.21.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "child_process": "^1.0.2",
@@ -20,14 +21,18 @@
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^7.0.2",
     "express": "^4.17.1",
+    "fabric": "^4.3.1",
+    "flexboxgrid": "^6.3.1",
     "jsdom": "13.0.0",
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
-    "next": "^10.0.9",
+    "next": "10.1.3",
     "next-i18next": "^8.1.2",
     "next-images": "^1.7.0",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-icons": "^4.2.0",
     "react-sketch": "^0.5.1",
     "react-sketch-whiteboard": "^3.9.3",
